src/components/JobAnalytics/JobsHitsApplicationsChart/JobsHitsApplicationsChart.module.css
.mainContainer {
  margin: auto;
  height: 100%;
}

.bgOxfordBlue {
  background-color: #1b2a41
}

.colorWhite {
  color: white;
}

.mainContainer h4 {
  text-align: center;
}

.filterContainer {
  width: 1200px;
  margin-top: 30px;
  margin-left: auto;
  margin-right: auto;
}

.startDate, .endDate, .dateReset {
  display: inline-block;
  width: 30%;
  padding: 8px;
}

.dateFilter {
  width: 50%;
  float: left;
}

.datePicker {
  width: 108px;
  padding: 4px 8px;
  border-radius: 8px;
}

.roleFilter {
  width: 50%;
  float: left;
  padding: 8px;
}

.roleFilterContainer {
  width: 656px;
  margin-left: auto;
}

.roleSelector {
  display: inline-block;
  width: 592px;
  margin: 4px;
  padding: 4px 8px;
  border-radius: 8px;
}

.chartContainer {
  width: 100%;
  height: 500px;
  margin-top: 108px;
  display: flex;
  justify-content: center;
}

.chart {
  width: 70%;
  height: 100%;
}

.spinner {
  text-align: center;
  font-size: 18px;
  color: #888;
}

.errorMessage {
  text-align: center;
  color: #dc3545;
  font-weight: bold;
}

.emptyMessage {
  text-align: center;
  color: #888;
  font-style: italic;
}

.resetBtn {
  border: 1px grey solid;
  padding: 4px 8px;
  border-radius: 8px;
  background-color: #8884d8;
  font-weight: 500;
}

.resetBtn:hover {
  background-color: #82ca9d;
  cursor: pointer;
}

.resetBtnDark {
  color: white;
}

@media (max-width: 1200px) {
  .filterContainer {
    width: 100%;
    max-width: 1000px;
  }

  .dateFilter {
    width: 100%;
    float: none;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0px 8px;
    padding: 0px 8px;
  }

  .roleFilter {
    width: 100%;
    float: none;
    margin: 0px 8px;
    padding: 0px 8px;
  }

  .roleSelector {
    max-width: 100%;
    width: 90%;
  }
  
  .roleFilterContainer {
    max-width: 100%;
    margin: 8px;
    margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .startDate, .endDate {
    display: flex;
    justify-content: center;
  }

  .dateName {
    margin-top: 4px;  
  }

  .datePicker {
    margin: 0px 8px;
  }
}

@media (max-width: 570px) {

  .datePicker {
    width: 95%;
    margin: 8px;
  }

}

