Fix: Added changes in dark mode for better visibility of dates.

--- a/src/components/JobAnalytics/JobsHitsApplicationsChart/JobsHitsApplicationsChart.module.css
+++ b/src/components/JobAnalytics/JobsHitsApplicationsChart/JobsHitsApplicationsChart.module.css
@@ -7,6 +7,11 @@
   background-color: #1b2a41
 }
 
+.bgSpaceCadet {
+  background-color: #1C2541;
+  color: white;
+}
+
 .colorWhite {
   color: white;
 }
